--- a/aboutme.css
+++ b/aboutme.css
@@ -10,7 +10,7 @@ background-color: #131313;
 background-size: 20px 20px;
 }
 
- #navbar ul {
+#navbar ul {
 	margin: 0;
 	padding: 5px;
 	list-style-type: none;
@@ -33,7 +33,8 @@ background-size: 20px 20px;
 	color: #000;
 	background-color: #fff;
 	}
-  li{
+  
+#p{
    font-size:20px;
    font-family:impact;
    text-align:center;
